--- a/Midterm Project - ITWS/contactme.html
+++ b/Midterm Project - ITWS/contactme.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Education</title>    
+    <title>Contacts</title>    
     <link rel = "stylesheet" href = "midterm.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta name = "viewport" content = "width-device-width, initial-scale = 1">
@@ -23,7 +23,7 @@
         <h1 class = "h1title fade-in-text borderheader">Contacts</h1>
     </div>
 
-    <div class = "icon">
+    <div class = "icon fade-in-text">
     <ul>
         <li> <a href = "https://www.facebook.com/johnlester.sareno.18" class ="fa fa-facebook" target = "_blank"> </a> </li>
         <li> <a href = "https://twitter.com/resutaaaa?t=ovZI1QwySV1AG2vSWlWKFg&s=09" class ="fa fa-twitter" target = "_blank"> </a> </li>
@@ -31,5 +31,5 @@
     </ul>
     </div>
 
-    <p class = "aboutme"> Phone Number: 09666326163 <br>
+    <p class = "aboutme fade-in-text"> Phone Number: 09666326163 <br>
                           Email: jlsareno2@gmail.com</p>
